--- a/configs/nora-viking.yaml
+++ b/configs/nora-viking.yaml
@@ -1,4 +1,4 @@
-T: 256
+T: 1000
 
 arch:
   width_mult: 32
@@ -9,9 +9,9 @@ optim:
   weight_decay: 0.01
 
 training:
-  batch_size: 32
+  batch_size: 128
   log_freq: 10
-  checkpoint_freq: 500
+  checkpoint_freq: 1000
   steps: 2
 
 wandb:
@@ -20,15 +20,15 @@ wandb:
   gradient_freq: 50
   project: noisy
   group: birds
-  name: null
-  tags: [birds, rgb, size_64x64, local, width_32]
+  name: nora
+  tags: [birds, rgb, size_64x64, viking, width_32]
 
 img:
   size: 64
   channels: 3
 
 data:
-  path: ./data/birds/
+  path: ../data/birds/
   extensions:
     - .jpeg
     - .jpg
