--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,19 +1,21 @@
-T: 256
+T: 1000
 
 arch:
-  width_mult: 32
+  width_mult: 16
   timestep_channels: 5
+  diffusion_method: linear
+  pos_emb_channels: 16
 
 optim:
-  lr: 0.001
-  weight_decay: 0.01
+  lr: 0.0001
+  weight_decay: 0.0
 
 training:
   batch_size: 32
   log_freq: 10
   checkpoint_freq: 500
   metrics_freq: 5
-  steps: 2
+  steps: 1
 
 wandb:
   enable: true
