--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,10 +1,12 @@
-T: 1000
+diffusion:
+  T: 1000
+  beta_start: 0.0001
+  beta_stop: 0.01
 
 arch:
   width_mult: 16
-  timestep_channels: 5
+  timestep_channels: 8
   diffusion_method: linear
-  pos_emb_channels: 16
 
 optim:
   lr: 0.0001
