--- a/configs/lara-viking.yaml
+++ b/configs/lara-viking.yaml
@@ -1,37 +1,38 @@
-T: 1000
+diffusion:
+  T: 1000
+  beta_start: 0.0001
+  beta_stop: 0.01
 
 arch:
   width_mult: 64
-  timestep_channels: 5
-  diffusion_method: linear
+  timestep_channels: 16
 
 optim:
-  lr: 0.001
-  weight_decay: 0.01
+  lr: 0.0001
+  weight_decay: 0.0
 
 training:
-  batch_size: 128
+  batch_size: 64
   log_freq: 10
   checkpoint_freq: 2000
   metrics_freq: 5
-  steps: 2
 
 wandb:
   enable: true
-  log_freq: 20
+  log_freq: 10
   img_freq: 500
-  gradient_freq: 250
+  gradient_freq: 100
   project: noisy
   group: birds
-  name: nora
-  tags: [birds, rgb, size_64x64, viking, width_32]
+  name: lara
+  tags: [birds, rgb, size_64x64, viking, width_64]
 
 img:
   size: 64
   channels: 3
 
 data:
-  path: ../data/birds/
+  path: ./data/birds/
   extensions:
     - .jpeg
     - .jpg
