--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -18,6 +18,8 @@ training:
   checkpoint_freq: 1000
   persist_freq: 50
   metrics_freq: 5
+  ema_alpha: 0.995
+  ema_freq: 20
 
 wandb:
   enable: true
