--- a/configs/lara-viking.yaml
+++ b/configs/lara-viking.yaml
@@ -17,6 +17,8 @@ training:
   checkpoint_freq: 2000
   persist_freq: 50
   metrics_freq: 5
+  ema_alpha: 0.995
+  ema_freq: 20
 
 wandb:
   enable: true
