--- a/configs/maria-viking.yaml
+++ b/configs/maria-viking.yaml
@@ -4,33 +4,34 @@ diffusion:
   beta_stop: 0.01
 
 arch:
-  width_mult: 128
+  model: Maria
+  width_mult: 64
   timestep_channels: 16
 
 optim:
   lr: 0.0001
-  weight_decay: 0.0001
+  weight_decay: 0.0005
 
 training:
-  batch_size: 64
-  log_freq: 10
-  checkpoint_freq: 4000
-  persist_freq: 500
+  batch_size: 32
+  log_freq: 20
+  checkpoint_freq: 5000
+  persist_freq: 1000
   metrics_freq: 10
-  ema_alpha: 0.995
+  ema_alpha: 0.998
   ema_freq: 20
 
 wandb:
   enable: true
-  log_freq: 10
+  log_freq: 20
   img_freq: 2000
   img_n: 8
   img_show_bar: false
   gradient_freq: 500
   project: noisy
   group: birds
-  name: lara
-  tags: [birds, rgb, size_128x128, viking, width_128]
+  name: maria-viking
+  tags: [birds, rgb, size_128x128, viking, width_64]
 
 img:
   size: 128
