--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -19,6 +19,7 @@ training:
   checkpoint_freq: 1000
   persist_freq: 50
   metrics_freq: 5
+  metrics_ema_alpha: 0.9
   ema_alpha: 0.995
   ema_freq: 20
 
